--- a/public/home.html
+++ b/public/home.html
@@ -83,7 +83,7 @@
   </header>
 
   <nav>
-    <a href="https://bertrand82.github.io/word-stuffing-brain/home.html">Home</a>
+    <a href="home.html">Home</a>
     <a href="https://github.com/Bertrand82/word-stuffing-brain">GitHub</a>
     <a href="https://memorybooster-8275c.web.app/">App</a>
     <a href="termsofservice.html">Terms of Service</a>
