--- a/src/home.html
+++ b/src/home.html
@@ -99,6 +99,8 @@
 	 <section class="todo">
       <h2>TODO</h2>
       <ul>
+		<li>Save local est ambigue: save le mot current uniquement <li>
+	    <li>bugs : Lors de l'upload d'un fichier drive, reinialiser le numero de ligne current </li>
         <li>Import file from google drive</li>        
         <li>Design mobile-friendly layout</li>
         <li>Translate interface to French/English</li>
