save and deploy

--- a/src/home.html
+++ b/src/home.html
@@ -93,8 +93,10 @@
 
   <main>
     <p>
-      <strong>Word‑Stuffing‑Brain</strong> is an application designed to help you review, memorize, and listen to English vocabulary lists in a clean, user‑friendly environment.
+      <strong>Word‑Stuffing‑Brain</strong> is an application designed to help you review, memorize and listen to English vocabulary lists in a friendly and shared environment.
     </p>
+	<p>The environment is shared, via Google Drive, between your computers and mobile phones. It is also optionally shared with your contacts.
+	</p>
 	
 	 <section class="todo">
       <h2>TODO</h2>
