--- a/src/home.html
+++ b/src/home.html
@@ -86,7 +86,9 @@
     <a href="home.html">Home</a>
     <a href="https://github.com/Bertrand82/word-stuffing-brain">GitHub</a>
     <a href="https://memorybooster-8275c.web.app/">App firebase</a>
-	<a href="index.html">App github</a>
+	 <a href="https://bertrand82.github.io/word-stuffing-brain/">App github</a>
+	 <a href="http://localhost:4200/">App localhost</a>
+	<a href="index.html">App </a>
     <a href="termsofservice.html">Terms of Service</a>
     <a href="privacypolicy.html">Privacy Policy</a>
   </nav>
@@ -95,20 +97,16 @@
     <p>
       <strong>Word‑Stuffing‑Brain</strong> is an application designed to help you review, memorize and listen to English vocabulary lists in a friendly and shared environment.
     </p>
-	<p>The environment is shared, via Google Drive, between your computers and mobile phones. It is also optionally shared with your contacts.
+	<p>The environment can be shared, via Google Drive, between your computers and mobile phones. It can be also optionally shared with your contacts.
 	</p>
 	
 	 <section class="todo">
       <h2>TODO</h2>
       <ul>
 		<li>Save local est ambigue: save le mot current uniquement <li>
-	    <li>bugs : Lors de l'upload d'un fichier drive, reinialiser le numero de ligne current </li>
-        <li>Import file from google drive</li>        
         <li>Design mobile-friendly layout</li>
         <li>Translate interface to French/English</li>
         <li>Choose target language</li>
-        <li>Use word in sentence </li>
-        <li>Correct sentence </li>
 		<li>Score </li>
       </ul>
     </section>
