--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,5 @@
 <body class="mat-typography">
 <script src="https://accounts.google.com/gsi/client" async defer></script>
   <app-root></app-root>
-<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-3FMEQ3VE.js" type="module"></script></body>
+<script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-GJOM6VK7.js" type="module"></script></body>
 </html>
