--- a/src/home.html
+++ b/src/home.html
@@ -113,6 +113,9 @@
   </main>
 
   <footer>
+  <nav>
+		<a href="https://bertrand82.github.io/bgOpenRouter/">openRouter test</a>
+  </nav>
      2025 Word‑Stuffing‑Brain.
   </footer>
 
