--- a/src/home.html
+++ b/src/home.html
@@ -114,7 +114,8 @@
 
   <footer>
   <nav>
-		<a href="https://bertrand82.github.io/bgOpenRouter/">openRouter test</a>
+		<a href="https://bertrand82.github.io/bgOpenRouter/">bgOpenRouter github</a>
+		<a href="https://bgopenrouter.web.app"/>bgOpenRouter fireBase</a>
   </nav>
      2025 Word‑Stuffing‑Brain.
   </footer>
