--- a/src/home.html
+++ b/src/home.html
@@ -99,7 +99,14 @@
     </p>
 	<p>The environment can be shared, via Google Drive, between your computers and mobile phones. It can be also optionally shared with your contacts.
 	</p>
-	
+  <p>
+    So long the application is not verified by google, to use the Google Drive features, the administrator need to allow the application to access your Google Drive account.
+    <br>
+    <a href="https://console.cloud.google.com/auth/audience?inv=1&invt=Ab4ZPQ&project=wordtrainingbg">admin drive</a>
+    <br/>
+    <strong>Note:</strong> The application does not store any of your personal data, it only uses the Google Drive API to read and write files in your Google Drive.
+  </p>
+
 	 <section class="todo">
       <h2>TODO</h2>
       <ul>
